Changed main recurrence type struct - replaced large static arrays that were unused in most cases with pointers to dynamic fields. This dramatically reduces memory consumption when working with timezones and recurrence rules.

--- a/src/libical/icalderivedvalue.c.in
+++ b/src/libical/icalderivedvalue.c.in
@@ -134,20 +134,15 @@ void icalvalue_set_recur(icalvalue *impl, struct icalrecurrencetype v)
     icalerror_check_value_type(value, ICAL_RECUR_VALUE);
 
     if (impl->data.v_recur != 0) {
-        icalmemory_free_buffer(impl->data.v_recur->rscale);
-        icalmemory_free_buffer(impl->data.v_recur);
+        icalrecurrencetype_free(impl->data.v_recur);
         impl->data.v_recur = 0;
     }
 
-    impl->data.v_recur = icalmemory_new_buffer(sizeof(struct icalrecurrencetype));
+    impl->data.v_recur = icalrecurrencetype_clone(&v);
 
     if (impl->data.v_recur == 0) {
         icalerror_set_errno(ICAL_NEWFAILED_ERROR);
         return;
-    } else {
-        memcpy(impl->data.v_recur, &v, sizeof(struct icalrecurrencetype));
-
-        if (v.rscale) impl->data.v_recur->rscale = icalmemory_strdup(v.rscale);
     }
 }
 
